// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`US-WS-015 roll delivery surface > aggregates --all read-only and fails loud for ambiguity, mutation --all and missing Issue 1`] = `
{
  "all": {
    "schema": "roll.delivery-list/v1",
    "workspaces": [
      {
        "issues": [
          {
            "conflicts": [],
            "integrationAcceptance": {
              "expectedCommandDigest": "e6680db8369d4d1cbaec40d289bbed4ccee82dc1bedc5a9703da8f4099428388",
              "status": "missing",
            },
            "mergeCommits": {
              "repo-4f4f562f0619": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            },
            "outstandingGates": [
              {
                "kind": "repository",
                "repoId": "repo-e43f540f73ce",
                "status": "awaiting_merge",
              },
            ],
            "repositories": [
              {
                "access": "write",
                "alias": "api",
                "authority": "provider",
                "facts": [
                  {
                    "authority": "provider",
                    "ci": "green",
                    "cycleId": "cycle-US-A-101",
                    "mergeCommit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
                    "prNumber": 101,
                    "prState": "MERGED",
                    "recordedAt": 10,
                  },
                ],
                "mergeCommit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
                "repoId": "repo-4f4f562f0619",
                "requiredDelivery": true,
                "status": "merged",
              },
              {
                "access": "write",
                "alias": "web",
                "authority": "provider",
                "facts": [
                  {
                    "authority": "provider",
                    "ci": "pending",
                    "cycleId": "cycle-US-A-102",
                    "prNumber": 102,
                    "prState": "OPEN",
                    "recordedAt": 11,
                  },
                ],
                "repoId": "repo-e43f540f73ce",
                "requiredDelivery": true,
                "status": "awaiting_merge",
              },
            ],
            "state": "partial_delivery",
            "storyId": "US-A",
            "workspaceId": "ws-alpha",
          },
        ],
        "path": "<WS_1>",
        "workspaceId": "ws-alpha",
      },
      {
        "issues": [
          {
            "conflicts": [],
            "integrationAcceptance": {
              "artifactPath": "evidence/integration.txt",
              "commandDigest": "e6680db8369d4d1cbaec40d289bbed4ccee82dc1bedc5a9703da8f4099428388",
              "expectedCommandDigest": "e6680db8369d4d1cbaec40d289bbed4ccee82dc1bedc5a9703da8f4099428388",
              "inputMergeCommits": {
                "repo-42ba3bad9879": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
                "repo-7ce3d2a7a928": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              },
              "profile": "local-multi-repo",
              "recordedAt": 22,
              "status": "pass",
              "verdict": "pass",
            },
            "mergeCommits": {
              "repo-42ba3bad9879": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
              "repo-7ce3d2a7a928": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            },
            "outstandingGates": [],
            "repositories": [
              {
                "access": "write",
                "alias": "api",
                "authority": "provider",
                "facts": [
                  {
                    "authority": "provider",
                    "ci": "green",
                    "cycleId": "cycle-US-B-201",
                    "mergeCommit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
                    "prNumber": 201,
                    "prState": "MERGED",
                    "recordedAt": 20,
                  },
                ],
                "mergeCommit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
                "repoId": "repo-7ce3d2a7a928",
                "requiredDelivery": true,
                "status": "merged",
              },
              {
                "access": "write",
                "alias": "web",
                "authority": "provider",
                "facts": [
                  {
                    "authority": "provider",
                    "ci": "green",
                    "cycleId": "cycle-US-B-202",
                    "mergeCommit": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
                    "prNumber": 202,
                    "prState": "MERGED",
                    "recordedAt": 21,
                  },
                ],
                "mergeCommit": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
                "repoId": "repo-42ba3bad9879",
                "requiredDelivery": true,
                "status": "merged",
              },
            ],
            "state": "delivered",
            "storyId": "US-B",
            "workspaceId": "ws-beta",
          },
        ],
        "path": "<WS_2>",
        "workspaceId": "ws-beta",
      },
    ],
  },
  "ambiguous": {
    "status": 1,
    "stderr": "{
  "schema": "roll.delivery-error/v1",
  "error": {
    "code": "target_missing",
    "message": "Provide one registered Workspace ID or path",
    "candidates": [
      {
        "workspaceId": "ws-alpha",
        "path": "<WS_1>"
      },
      {
        "workspaceId": "ws-beta",
        "path": "<WS_2>"
      }
    ]
  }
}
",
    "stdout": "",
  },
  "missing": {
    "status": 1,
    "stderr": "{
  "schema": "roll.delivery-error/v1",
  "error": {
    "code": "story_not_found",
    "message": "Issue was not found in the selected Workspace",
    "candidates": []
  }
}
",
    "stdout": "",
  },
  "mutationAll": {
    "status": 1,
    "stderr": "{
  "schema": "roll.delivery-error/v1",
  "error": {
    "code": "all_requires_readonly",
    "message": "--all is read-only and cannot be used for lifecycle mutations",
    "candidates": []
  }
}
",
    "stdout": "",
  },
}
`;

exports[`US-WS-015 roll delivery surface > freezes locale-specific help without adjacent bilingual output 1`] = `
{
  "en": "Usage: roll delivery <list|show|reconcile> [options]
  \`list [--workspace <id|path> | --all] [--json]\`
  \`show <story-id> [--workspace <id|path>] [--json]\`
  \`reconcile [<story-id>] --workspace <id|path> [--dry-run] [--json]\`
  Delivery is an Issue fact view; --all is read-only and reconciliation never reads backlog Markdown as completion truth.
",
  "loopEn": "Usage: roll loop reconcile [<story-id>] --workspace <id|path> [--dry-run] [--json]
  Alias of \`roll delivery reconcile\`; folds Workspace Issue facts and never reads backlog Markdown as completion truth.
",
  "loopZh": "用法：roll loop reconcile [<Story ID>] --workspace <ID|路径> [--dry-run] [--json]
  \`roll delivery reconcile\` 的别名；折叠工作区 Issue 事实，绝不把 backlog Markdown 当作完成真相。
",
  "zh": "用法：roll delivery <list|show|reconcile> [选项]
  \`list [--workspace <ID|路径> | --all] [--json]\`
  \`show <Story ID> [--workspace <ID|路径>] [--json]\`
  \`reconcile [<Story ID>] --workspace <ID|路径> [--dry-run] [--json]\`
  Delivery 是 Issue 事实视图；--all 仅限只读，对账绝不把 backlog Markdown 当作完成真相。
",
}
`;

exports[`US-WS-015 roll delivery surface > freezes stable list/show JSON with every required repository fact and exact-SHA acceptance 1`] = `
{
  "list": {
    "schema": "roll.delivery-list/v1",
    "workspaces": [
      {
        "issues": [
          {
            "conflicts": [],
            "integrationAcceptance": {
              "artifactPath": "evidence/integration.txt",
              "commandDigest": "e6680db8369d4d1cbaec40d289bbed4ccee82dc1bedc5a9703da8f4099428388",
              "expectedCommandDigest": "e6680db8369d4d1cbaec40d289bbed4ccee82dc1bedc5a9703da8f4099428388",
              "inputMergeCommits": {
                "repo-4f4f562f0619": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
                "repo-e43f540f73ce": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
              },
              "profile": "local-multi-repo",
              "recordedAt": 22,
              "status": "pass",
              "verdict": "pass",
            },
            "mergeCommits": {
              "repo-4f4f562f0619": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              "repo-e43f540f73ce": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
            },
            "outstandingGates": [],
            "repositories": [
              {
                "access": "write",
                "alias": "api",
                "authority": "provider",
                "facts": [
                  {
                    "authority": "provider",
                    "ci": "green",
                    "cycleId": "cycle-US-DELIVERED-201",
                    "mergeCommit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
                    "prNumber": 201,
                    "prState": "MERGED",
                    "recordedAt": 20,
                  },
                ],
                "mergeCommit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
                "repoId": "repo-4f4f562f0619",
                "requiredDelivery": true,
                "status": "merged",
              },
              {
                "access": "write",
                "alias": "web",
                "authority": "provider",
                "facts": [
                  {
                    "authority": "provider",
                    "ci": "green",
                    "cycleId": "cycle-US-DELIVERED-202",
                    "mergeCommit": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
                    "prNumber": 202,
                    "prState": "MERGED",
                    "recordedAt": 21,
                  },
                ],
                "mergeCommit": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
                "repoId": "repo-e43f540f73ce",
                "requiredDelivery": true,
                "status": "merged",
              },
            ],
            "state": "delivered",
            "storyId": "US-DELIVERED",
            "workspaceId": "ws-alpha",
          },
          {
            "conflicts": [],
            "integrationAcceptance": {
              "expectedCommandDigest": "e6680db8369d4d1cbaec40d289bbed4ccee82dc1bedc5a9703da8f4099428388",
              "status": "missing",
            },
            "mergeCommits": {
              "repo-4f4f562f0619": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              "repo-e43f540f73ce": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
            },
            "outstandingGates": [
              {
                "kind": "integration_acceptance",
                "status": "missing",
              },
            ],
            "repositories": [
              {
                "access": "write",
                "alias": "api",
                "authority": "provider",
                "facts": [
                  {
                    "authority": "provider",
                    "ci": "green",
                    "cycleId": "cycle-US-INTEGRATION-201",
                    "mergeCommit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
                    "prNumber": 201,
                    "prState": "MERGED",
                    "recordedAt": 20,
                  },
                ],
                "mergeCommit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
                "repoId": "repo-4f4f562f0619",
                "requiredDelivery": true,
                "status": "merged",
              },
              {
                "access": "write",
                "alias": "web",
                "authority": "provider",
                "facts": [
                  {
                    "authority": "provider",
                    "ci": "green",
                    "cycleId": "cycle-US-INTEGRATION-202",
                    "mergeCommit": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
                    "prNumber": 202,
                    "prState": "MERGED",
                    "recordedAt": 21,
                  },
                ],
                "mergeCommit": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
                "repoId": "repo-e43f540f73ce",
                "requiredDelivery": true,
                "status": "merged",
              },
            ],
            "state": "integration_pending",
            "storyId": "US-INTEGRATION",
            "workspaceId": "ws-alpha",
          },
          {
            "conflicts": [],
            "integrationAcceptance": {
              "expectedCommandDigest": "e6680db8369d4d1cbaec40d289bbed4ccee82dc1bedc5a9703da8f4099428388",
              "status": "missing",
            },
            "mergeCommits": {
              "repo-4f4f562f0619": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            },
            "outstandingGates": [
              {
                "kind": "repository",
                "repoId": "repo-e43f540f73ce",
                "status": "awaiting_merge",
              },
            ],
            "repositories": [
              {
                "access": "write",
                "alias": "api",
                "authority": "provider",
                "facts": [
                  {
                    "authority": "provider",
                    "ci": "green",
                    "cycleId": "cycle-US-PARTIAL-101",
                    "mergeCommit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
                    "prNumber": 101,
                    "prState": "MERGED",
                    "recordedAt": 10,
                  },
                ],
                "mergeCommit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
                "repoId": "repo-4f4f562f0619",
                "requiredDelivery": true,
                "status": "merged",
              },
              {
                "access": "write",
                "alias": "web",
                "authority": "provider",
                "facts": [
                  {
                    "authority": "provider",
                    "ci": "pending",
                    "cycleId": "cycle-US-PARTIAL-102",
                    "prNumber": 102,
                    "prState": "OPEN",
                    "recordedAt": 11,
                  },
                ],
                "repoId": "repo-e43f540f73ce",
                "requiredDelivery": true,
                "status": "awaiting_merge",
              },
            ],
            "state": "partial_delivery",
            "storyId": "US-PARTIAL",
            "workspaceId": "ws-alpha",
          },
        ],
        "path": "<WS_1>",
        "workspaceId": "ws-alpha",
      },
    ],
  },
  "show": {
    "issue": {
      "conflicts": [],
      "integrationAcceptance": {
        "artifactPath": "evidence/integration.txt",
        "commandDigest": "e6680db8369d4d1cbaec40d289bbed4ccee82dc1bedc5a9703da8f4099428388",
        "expectedCommandDigest": "e6680db8369d4d1cbaec40d289bbed4ccee82dc1bedc5a9703da8f4099428388",
        "inputMergeCommits": {
          "repo-4f4f562f0619": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
          "repo-e43f540f73ce": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
        },
        "profile": "local-multi-repo",
        "recordedAt": 22,
        "status": "pass",
        "verdict": "pass",
      },
      "mergeCommits": {
        "repo-4f4f562f0619": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        "repo-e43f540f73ce": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
      },
      "outstandingGates": [],
      "repositories": [
        {
          "access": "write",
          "alias": "api",
          "authority": "provider",
          "facts": [
            {
              "authority": "provider",
              "ci": "green",
              "cycleId": "cycle-US-DELIVERED-201",
              "mergeCommit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
              "prNumber": 201,
              "prState": "MERGED",
              "recordedAt": 20,
            },
          ],
          "mergeCommit": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
          "repoId": "repo-4f4f562f0619",
          "requiredDelivery": true,
          "status": "merged",
        },
        {
          "access": "write",
          "alias": "web",
          "authority": "provider",
          "facts": [
            {
              "authority": "provider",
              "ci": "green",
              "cycleId": "cycle-US-DELIVERED-202",
              "mergeCommit": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
              "prNumber": 202,
              "prState": "MERGED",
              "recordedAt": 21,
            },
          ],
          "mergeCommit": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
          "repoId": "repo-e43f540f73ce",
          "requiredDelivery": true,
          "status": "merged",
        },
      ],
      "state": "delivered",
      "storyId": "US-DELIVERED",
      "workspaceId": "ws-alpha",
    },
    "schema": "roll.delivery-view/v1",
  },
}
`;

exports[`US-WS-015 roll delivery surface > names partial, integration-pending and delivered gates in each locale 1`] = `
{
  "en": "Deliveries ws-en (3)
Story	State	Outstanding
US-DELIVERED	delivered	-
US-INTEGRATION	integration_pending	integration_acceptance:missing
US-PARTIAL	partial_delivery	repository:repo-dc76ac076559:awaiting_merge
",
  "zh": "交付 ws-zh（3）
Story	状态	待完成闸门
US-DELIVERED	delivered	-
US-INTEGRATION	integration_pending	integration_acceptance:missing
US-PARTIAL	partial_delivery	repository:repo-794472ab3629:awaiting_merge
",
}
`;
